# PyElastica

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  CONTRIBUTING.md  Fan_timoshenko.ipynb  HelicalBuckling.py  LICENSE  Makefile  README.md  README.rst  RELEASE.md  Tumbling_Unconstrained_Rod_postprocessing  apt.txt  bending.ipynb  cantilever_distributed_load.py  cantilever_distributed_load_postprocessing.py  cantilever_nonconservative_distributed_load.py  convergence_cantilever_transveral_load  convergence_functions.py  convergence_helicalbuckling  convergence_timoshenko.py  environment.yml  optional-requirements.txt  positionVerlet2nd.py  pyproject.toml  readme.md  requirements.txt  rod.py  setup.py  stretch.ipynb  timoshenko.ipynb  timoshenko.py
backend/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  meson.build  pyproject.toml  setup.py
backend/benchmarking/: PDE_benchmark.ipynb  batchcross.py  inv_rotate.py  matmul.py  memory_block_integrity_check.py  rotate.py
backend/buildscripts/: build-all.sh
backend/cmake/: AddCxxFlag.cmake  CheckCompilerVersion.cmake  ElasticaAddInterfaceLibraryHeaders.cmake  ElasticaSetupFlagsTarget.cmake  EnableWarnings.cmake  FindBlaze.cmake  FindBlazeTensor.cmake  FindFilesystem.cmake  FindSleef.cmake  FindTBB.cmake  FindYamlCpp.cmake  GetEnvPath.cmake  Logging.cmake  PrintUsefulCMakeInfo.cmake  SetBuildType.cmake  SetCxxStandard.cmake  SetOutputDirectory.cmake  SetupBlaze.cmake  SetupBlazeTensor.cmake  SetupCxxFlags.cmake  SetupElasticaInlining.cmake  SetupFilesystem.cmake  SetupHDF5.cmake  SetupMacOsx.cmake  SetupPic.cmake  SetupPybind11.cmake  SetupSanitizers.cmake  SetupSleef.cmake  SetupStl.cmake  SetupTBB.cmake
backend/examples/: run_timoshenko.py  tutorial_rod_construction.cpp
backend/src/: CMakeLists.txt  __init__.py  _api.cpp  _linalg.cpp  _linalg_numpy.cpp  _rotations.cpp  _version.cpp  api.h  block.h  block_get_impl.h  block_view.h  cosserat_equations.h  cosserat_rod_system.h  example_1.cpp  meson.build  operations.h  system.h  traits.h  variable_offsets.h  version.h
backend/src/BindExamples/: Bindings.cpp
backend/src/Configuration/: .gitignore  Kernels.hpp  Logging.hpp  Parallel.hpp  README.md  Systems.hpp
backend/src/ErrorHandling/: Abort.hpp  AbortWithErrorMessage.cpp  AbortWithErrorMessage.hpp  Assert.hpp  Breakpoint.cpp  Breakpoint.hpp  CMakeLists.txt  Error.hpp  Exit.hpp  ExpectsAndEnsures.hpp  FloatingPointExceptions.cpp  FloatingPointExceptions.hpp  NestedExceptions.cpp  NestedExceptions.hpp  README.md
backend/src/ModuleSettings/: Parallel.hpp  Systems.hpp  Vectorization.hpp  Version.hpp
backend/src/Simulator/: Frames.hpp  Materials.hpp
backend/src/Simulator/Frames/: EulerianFrame.hpp  LagrangianFrame.hpp  RotationConvention.hpp
backend/src/Simulator/Materials/: CMakeLists.txt  Materials.cpp  Materials.hpp  Types.hpp
backend/src/Systems/: Block.hpp  CMakeLists.txt  CosseratRods.hpp  Protocols.hpp  README.md  Systems.hpp  Tags.hpp  Types.hpp
backend/src/Systems/Block/: Block.hpp  Protocols.hpp  Serialize.hpp  TypeTraits.hpp  Types.hpp
backend/src/Systems/CosseratRods/: Access.hpp  Aliases.hpp  Block.hpp  BlockInitializer.hpp  BlockSlice.hpp  BlockView.hpp  CMakeLists.txt  Components.hpp  Concepts.org  CosseratRodPlugin.hpp  CosseratRodTraits.hpp  CosseratRods.hpp  Initializers.hpp  Protocols.hpp  Tags.hpp  TypeTraits.hpp  Types.hpp  Utility.hpp  _Types.hpp
backend/src/Systems/Python/: BindTags.cpp  BindTags.hpp  Bindings.cpp
backend/src/Systems/States/: CMakeLists.txt  Concepts.org  README.md  States.hpp  TypeTraits.hpp  Types.hpp
backend/src/Systems/common/: Access.hpp  CMakeLists.txt  Cardinality.hpp  Components.hpp  IndexCheck.hpp  Initialization.hpp  Protocols.hpp  SymplecticStepperAdapter.hpp  Tags.hpp  Types.hpp
backend/src/Utilities/: AsConst.hpp  AsTaggedTuple.hpp  CMakeLists.txt  CRTP.hpp  DefineTypes.h  Demangle.cpp  Demangle.hpp  End.hpp  ForceInline.hpp  Generators.hpp  IgnoreUnused.hpp  Invoke.hpp  MakeNamedFunctor.hpp  MakeString.hpp  Math.hpp  NamedType.hpp  NoSuchType.hpp  NonCopyable.hpp  NonCreatable.hpp  NumericAt.hpp  NumericRange.hpp  Overloader.hpp  PrettyType.cpp  PrettyType.hpp  PrintHelpers.hpp  ProtocolHelpers.hpp  Requires.hpp  Restrict.hpp  Singleton.hpp  Size.hpp  StaticConst.hpp  StaticWarning.hpp  StdHelpers.hpp  StdVectorHelpers.hpp  StlStreamDeclarations.hpp  TMPL.hpp  TMPLDebugging.hpp  TaggedTuple.hpp  Thresholds.hpp  TypeTraits.hpp  (+3 more)
backend/src/Utilities/ConvertCase/: ConvertCase.cpp  ConvertCase.hpp
backend/src/Utilities/Math/: Accuracy.hpp  CMakeLists.txt  Dist.hpp  Dot.hpp  Equal.hpp  Identity.hpp  Infinity.hpp  Invert.hpp  Length.hpp  Normalize.hpp  Orthogonal.cpp  Orthogonal.hpp  Rot3.hpp  SqrLength.hpp  Sqrt.hpp  Square.hpp  Trans.hpp  Types.hpp  Vec3.hpp  Zero.hpp
backend/src/Utilities/NamedType/: Affordances.hpp  Aliases.hpp  CRTP.hpp  DefaultTag.hpp  MakeNamed.hpp  NamedType.hpp  Traits.hpp  Types.hpp
backend/src/Utilities/Singleton/: Dependency.hpp  Singleton.hpp  TypeTraits.hpp  Types.hpp
backend/src/Utilities/TypeTraits/: ArraySize.hpp  Cpp17.hpp  Cpp20.hpp  (+15 more)
backend/src/environment/: _api.cpp  api.h
backend/src/math/: node_element_mapping.cpp  node_element_mapping.h
backend/src/py/: __init__.py  collision_physics.py  memory_block_rod.py  module_collision.py  typing_alias.py
backend/src/utility/: hash.h
backend/subprojects/: blaze.wrap  blaze_tensor.wrap  brigand.wrap  cxxopts.wrap  sleef.wrap  tbb.wrap  yaml-cpp.wrap
backend/tests/: test_cosserat_rod.py  test_linalg.py  test_linalg_numpy.py  test_py_cpp_block_operation_match.py  test_rod_initialisation.py  test_rotations.py
backend/tests/cpp/: test_block.cpp  test_block_operations.cpp  test_block_view.cpp  test_system.cpp  test_system_variable_validation.cpp  test_traits.cpp  test_version.cpp
backend/tests/py/: test_block.py  test_block_ghost_indices.py  test_block_reset_ghost.py  test_block_reshape.py  test_block_view_rod.py  test_cosserat_rod_operation.py  test_version.py
(+6694 files in other folders)
