# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyelastica"
version = "0.3.2"
description = "Elastica is a software to simulate the dynamics of filaments that, at every cross-section, can undergo all six possible modes of deformation, allowing the filament to bend, twist, stretch and shear, while interacting with complex environments via muscular activity, surface contact, friction and hydrodynamics."
readme = "README.md"
authors = ["GazzolaLab <armant2@illinois.edu>"]
license = "MIT"
repository = "https://github.com/GazzolaLab/PyElastica"
homepage = "https://www.cosseratrods.org/"
documentation = "https://docs.cosseratrods.org/en/latest/"
keywords = []

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
# Trove classifiers
# Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
"License :: OSI Approved :: MIT License",
"Development Status :: 4 - Beta",
"Programming Language :: Python",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: Implementation :: CPython",
"Intended Audience :: Science/Research",
"Intended Audience :: Education",
]

# ...
packages = [
    { include = "elastica" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numba = "^0.57.0"
numpy = "^1.19.2"
scipy = "^1.5.2"
tqdm = "^4.61.1"
matplotlib = "^3.3.2"
pyvista = "^0.39.1"
# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
Sphinx = {version = "^6.1", optional = true}
sphinx-book-theme = {version = "^1.0", optional = true}
readthedocs-sphinx-search = {version = ">=0.1.1,<0.4.0", optional = true}
sphinx-autodoc-typehints = {version = "^1.21", optional = true}
sphinxcontrib-mermaid = {version = "^0.9.2", optional = true}
myst-parser = {version = "^1.0", optional = true}
numpydoc = {version = "^1.3.1", optional = true}
docutils = {version = "^0.18", optional = true}
cma = {version = "^3.2.2", optional = true}
mypy = "^1.10.0"
mypy-extensions = "^1.0.0"
flake8 = "^7.0.0"

[tool.poetry.dev-dependencies]
black = "24.3.0"
pytest = "^7.1.1"
coverage = "^6.3.3"
pre-commit = "^2.19.0"
pytest-html = "^3.1.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.14.0"
codecov = "2.1.13"
click = "8.0.0"
autoflake = "^2.3.1"

[tool.poetry.extras]
docs = [
  "sphinx",
  "sphinx-book-theme",
  "readthedocs-sphinx-search",
  "sphinx-autodoc-typehints",
  "sphinxcontrib-mermaid",
  "myst-parser",
  "numpydoc",
  "docutils",
]
examples = [
  "cma",
]

[tool.black]
# https://github.com/psf/black
target-version = ["py310"]
line-length = 88
color = true
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.autoflake]
ignore-init-module-imports = true
ignore-pass-statements = true
ignore-pass-after-docstring = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = "3.10"
pretty = true
show_traceback = true
color_output = true
strict = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_unimported = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = true
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = false
warn_unused_configs = true
warn_unused_ignores = false

exclude = [
    "elastica/experimental/*",
]

untyped_calls_exclude = [
    "pyvista",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Enable pragma
    "pragma: no cover",
    "TODO",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == __main__:",
    "pass",
    "def __repr__",
#"if self.debug:",
#"if settings.DEBUG",
    "from",
    "import",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    '''class '.*\bProtocol\)':''',
#''''@(abc\.)?'abstractmethod''',
]
fail_under = 40
show_missing = true

[tool.coverage.run]
branch = true
omit = [
    "*/.local/*",
	"setup.py",
    "elastica/experimental/*",
    "elastica/**/protocol.py",
]
